--- a/index.html
+++ b/index.html
@@ -2,10 +2,17 @@
 <html>
   <head>
     <title>YDSA @ FIU</title>
+    <link rel="stylesheet" href="main.css">
   </head>
   <body>
+    <h1 id="top">top of the page</h1>
+    <img src="/images/logo-square(1).png" width="260" alt="image of ydsa">
+
     <h1>Young Democratic Socialists of America</h1>
     <h1>Florida International University</h1>
-    <p></p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi dolore id omnis enim, possimus esse eius est illum natus iste deleniti quis, corrupti reprehenderit vero assumenda, quas voluptatibus cupiditate numquam nisi veniam consequatur asperiores quidem. Nostrum culpa ullam voluptatum rem eum obcaecati ut, distinctio qui totam ipsam! Perferendis tempora sit cum quasi eius! Quidem odit voluptates cum aperiam provident unde a facilis magnam cupiditate corporis modi quo facere beatae voluptatem sequi consequuntur officia totam hic ullam quibusdam eveniet doloremque labore, quisquam ea. Odio voluptatibus doloribus, sed, maiores recusandae dolores harum rem iure officia blanditiis illo? Alias qui error veniam eligendi.</p>
+    <a href="https://www.instagram.com/ydsafiu" target="_blank">Instagram</a>
+    <br>
+    <a href="#top">back to the top</a>
   </body>
 </html>
