--- a/language.html
+++ b/language.html
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-    content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie-edge">
-    <title>YDSA @ FIU</title> 
-    <link rel="stylesheet" href="language.css">
-  </head>
-  <body>
-    <div class="intro"><h1 class="logo-header">
-      <img class="star" src="/images/Mediamodifier-Design-Template (3).png" alt="star">
-      <img src="/images/Mediamodifier-Design-Template (5).png" alt="rose">
-      <img src="/images/Mediamodifier-Design-Template.png" alt="ydsa">
-      <img src="/images/stuff.png" alt="">
-    </div>
-
-      <script src="app.js"></script>
+<head>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="language.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>YDSA @ FIU</title>
+</head>
+<body>
+  <div class="intro">
+    <h1 class="logo-header">
+      <span class="logo">
+        <img src="/images/ydsa_font.png" alt="ydsa_font">
+      </span>
+      <span class="logo">
+        <img src="/images/ydsa_palm_leaf.png" alt="ydsa_palm_leaf">
+      </span>
+      <span class="logo">  
+        <img src="/images/ydsa_rose.png" alt="ydsa_rose">
+      </span>
+      <span class="logo">
+        <img src="/images/ydsa_star.png" alt="ydsa_star">
+      </span>  
     </h1>
-  </body>
+  </div>
+  <script src="app.js"></script>
+</body>
 </html>
