--- a/language.html
+++ b/language.html
@@ -1,28 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="language.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>YDSA @ FIU</title>
-</head>
-<body>
-  <div class="intro">
-    <h1 class="logo-header">
-      <span class="logo">
-        <img src="/images/ydsa_font.png" alt="ydsa_font">
-      </span>
-      <span class="logo">
-        <img src="/images/ydsa_palm_leaf.png" alt="ydsa_palm_leaf">
-      </span>
-      <span class="logo">  
-        <img src="/images/ydsa_rose.png" alt="ydsa_rose">
-      </span>
-      <span class="logo">
-        <img src="/images/ydsa_star.png" alt="ydsa_star">
-      </span>  
-    </h1>
-  </div>
-  <script src="app.js"></script>
-</body>
+<html>
+  <head>
+    <link rel="stylesheet" href="language.css">
+    <title>YDSA @ FIU</title>
+  </head>
+  <body>
+    <div class="main">
+      <div class="logo"><img class="whole_logo" id="whole" src="/images/ydsa_logo.png" alt="ydsa logo"></div>
+      <div class="whole_logo" id="name1">YOUNG DEMOCRATIC SOCIALISTS OF AMERICA</div>
+      <div class="whole_logo" id="name2">FLORIDA INTERNATIONAL UNVERSITY</div>
+      <div class="whole_logo" id="buttons">
+        <button id="language">English</button>
+        <button id="language">Español</button>
+        <button id="language">Kreyòl Ayisyen</button>
+      </div>
+    </div>
+    <script src="app.js"></script>
+  </body>
 </html>
