--- a/language.html
+++ b/language.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="shortcut icon" type="image/png" href="/images/ydsa_star.png">
     <link rel="stylesheet" href="language.css">
     <title>YDSA @ FIU</title>
   </head>
@@ -8,13 +9,13 @@
     <div class="main">
       <div class="logo"><img class="whole_logo" id="whole" src="/images/ydsa_logo.png" alt="ydsa logo"></div>
       <div class="whole_logo" id="name1">YOUNG DEMOCRATIC SOCIALISTS OF AMERICA</div>
-      <div class="whole_logo" id="name2">FLORIDA INTERNATIONAL UNVERSITY</div>
+      <div class="whole_logo" id="name2">FLORIDA INTERNATIONAL UNIVERSITY</div>
       <div class="whole_logo" id="buttons">
-        <button id="language">English</button>
-        <button id="language">Español</button>
-        <button id="language">Kreyòl Ayisyen</button>
+        <a href="en.html"><button id="language">English</button></a>
+        <a href="es.html"><button id="language">Español</button></a>
+        <a href="ht.html"><button id="language">Kreyòl ayisyen</button></a>
       </div>
     </div>
-    <script src="app.js"></script>
+    <script src="language.js"></script>
   </body>
 </html>
