--- a/en.html
+++ b/en.html
@@ -32,6 +32,19 @@
       <h1 id="fiu">FLORIDA INTERNATIONAL UNIVERSITY</h1>
     </div>
   </div>
+  <div class="content">
+    <a href=""><button class="btn">About Us</button></a>
+    <a href=""><button class="btn">Calendar</button></a>
+    <a href=""><button class="btn">Executive Board</button></a>
+    <a href=""><button class="btn">Upcoming Events</button></a>
+    <a href=""><button class="btn">Our Programs</button></a>
+    <a href=""><button class="btn">Funded By</button></a>
+    <a href=""><button class="btn">Social Medias</button></a>
+    <a href=""><button class="btn">Contact Us!</button></a>
+  </div>
+  <div class="join">
+    <a href=""><button class="joinus">JOIN US!</button></a>
+  </div>
   <script src="index.js"></script>
 </body>
 </html>
