--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="shortcut icon" type="image/png" href="/images/ydsa_star.png">
+    <link rel="shortcut icon" type="" href="images/ydsa_star.png">
     <link rel="stylesheet" href="language.css">
     <title>YDSA @ FIU</title>
   </head>
   <body>
     <div class="main">
-      <div class="logo"><img class="whole_logo" id="whole" src="/images/ydsa_logo.png" alt="ydsa logo"></div>
+      <div class="logo"><img class="whole_logo" id="whole" src="images/ydsa_logo.png" alt=""></div>
       <div class="whole_logo" id="name1">YOUNG DEMOCRATIC SOCIALISTS OF AMERICA</div>
       <div class="whole_logo" id="name2">FLORIDA INTERNATIONAL UNIVERSITY</div>
       <div class="whole_logo" id="buttons">
