--- a/en.html
+++ b/en.html
@@ -25,7 +25,7 @@
 <body>
   <div class="header">
     <div class="logo">
-      <img id="logopic" src="/images/ydsa_logo.png" alt="logo">
+      <img id="logopic" src="images/ydsa_logo.png" alt="">
     </div>
     <div class="title">
       <h1 id="ydsa">YOUNG DEMOCRATIC SOCIALISTS OF AMERICA</h1>
