--- a/en.html
+++ b/en.html
@@ -45,14 +45,21 @@
   <div class="join">
     <a href=""><button class="joinus">JOIN US!</button></a>
   </div>
-  <div id="insta">
-  <!-- 
-    <div class="tile">
-      <div class="text">
-        {{model.user.full_name}}
+  <div id="image_color">
+    <div id="ig_name">
+      <div class="iglogo">
+        <a href="https://www.instagram.com/ydsafiu" target="_blank"><img id="igpic" src="images/new-instagram-logo-white-border-icon-png-large.png" alt=""></a>
       </div>
-      <img class="item" src="{{image}}">
-    </div> -->
+      <div class="igtitle">
+        <a style="text-decoration: none;" href="https://www.instagram.com/ydsafiu" target="_blank"><h1 id="igydsa">INSTAGRAM</h1></a>
+      </div>
+    </div>
+    <div id="image_size">
+      <div id="slider">
+        <figure id="insta">
+        </figure>
+      </div>
+    </div>
   </div>
   <script src="https://cdn.jsdelivr.net/gh/stevenschobert/instafeed.js@2.0.0rc1/src/instafeed.min.js"></script>
   <script src="insta.js"></script>
