--- a/en.html
+++ b/en.html
@@ -19,7 +19,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="index.css">
-  <link rel="shortcut icon" type="image/png" href="/images/ydsa_star.png">
+  <link rel="shortcut icon" type="image/png" href="images/ydsa_star.png">
   <title>YDSA @ FIU - EN</title>
 </head>
 <body>
@@ -33,17 +33,17 @@
     </div>
   </div>
   <div class="content">
-    <a href=""><button class="btn">About Us</button></a>
-    <a href=""><button class="btn">Calendar</button></a>
-    <a href=""><button class="btn">Executive Board</button></a>
-    <a href=""><button class="btn">Upcoming Events</button></a>
-    <a href=""><button class="btn">Our Programs</button></a>
-    <a href=""><button class="btn">Funded By</button></a>
-    <a href=""><button class="btn">Social Medias</button></a>
-    <a href=""><button class="btn">Contact Us!</button></a>
+    <button onclick="window.location.href='#about'" class="btn">About Us</button>
+    <button class="btn">Membership Perks</button>
+    <button class="btn">Upcoming Events</button>
+    <button class="btn">Our Programs</button>
+    <button class="btn">Executive Board</button>
+    <button class="btn">Social Medias</button>
+    <a href="https://calendar.google.com/calendar/u/4?cid=Zml1eWRzYUBnbWFpbC5jb20" target="_blank"><button class="btn">Calendar</button></a>
+    <button class="btn">Contact Us!</button>
   </div>
   <div class="join">
-    <a href=""><button class="joinus">JOIN US!</button></a>
+    <a href="https://forms.gle/yAknTR4tM3VbDjJd9" target="_blank"><button class="joinus">JOIN US!</button></a>
   </div>
   <div id="image_color">
     <div id="ig_name">
@@ -60,6 +60,16 @@
         </figure>
       </div>
     </div>
+  </div>
+  <div id="about">
+    <h1>ABOUT US</h1>
+    <div id="aboutus">  
+      <p>We are a student and youth chapter/section of Democratic Socialists of America (DSA) and a national organization of recognized campus chapters and several hundred organizers. We are the sister chapter of Miami-DSA, centered in Florida International University. We are students organizing in our universities, colleges, and high schools to fight for the immediate change for workers and students while building our capacity to fight for more radical and structural changes.<br><br> As an organization that is following in the steps of DSA and past socialist movements, we staunchly are anti-fascist, anti-racist, anti-imperialist, and anti-capitalist.<br><br> We work with labor campaigns to organize student workers of staff, defending immigrants through campaigns for sanctuary campuses, divestinf our schools from fossil fuels, anti-poverty work through local mutual aid programs in our communities, and much much more. <br><br>YDSA-FIU fights for democratic socialism through political education and active campaigns to improve the lives of working people.</p>
+    </div>
+    <img id="ydsalogo2"src="images/ydsa_logo.png" alt="">
+  </div>
+  <div id="executive_board">
+
   </div>
   <script src="https://cdn.jsdelivr.net/gh/stevenschobert/instafeed.js@2.0.0rc1/src/instafeed.min.js"></script>
   <script src="insta.js"></script>
