--- a/en.html
+++ b/en.html
@@ -34,13 +34,13 @@
   </div>
   <div class="content">
     <button onclick="window.location.href='#about'" class="btn">About Us</button>
-    <button class="btn">Membership Perks</button>
+    <button onclick="window.location.href='#our_programs'"class="btn">Our Programs</button>
     <button class="btn">Upcoming Events</button>
-    <button class="btn">Our Programs</button>
+    <button class="btn">Membership Perks</button>
     <button class="btn">Executive Board</button>
     <button class="btn">Social Medias</button>
     <a href="https://calendar.google.com/calendar/u/4?cid=Zml1eWRzYUBnbWFpbC5jb20" target="_blank"><button class="btn">Calendar</button></a>
-    <button class="btn">Contact Us!</button>
+    <button class="btn">Contact Us</button>
   </div>
   <div class="join">
     <a href="https://forms.gle/yAknTR4tM3VbDjJd9" target="_blank"><button class="joinus">JOIN US!</button></a>
@@ -64,12 +64,23 @@
   <div id="about">
     <h1>ABOUT US</h1>
     <div id="aboutus">  
-      <p>We are a student and youth chapter/section of Democratic Socialists of America (DSA) and a national organization of recognized campus chapters and several hundred organizers. We are the sister chapter of Miami-DSA, centered in Florida International University. We are students organizing in our universities, colleges, and high schools to fight for the immediate change for workers and students while building our capacity to fight for more radical and structural changes.<br><br> As an organization that is following in the steps of DSA and past socialist movements, we staunchly are anti-fascist, anti-racist, anti-imperialist, and anti-capitalist.<br><br> We work with labor campaigns to organize student workers of staff, defending immigrants through campaigns for sanctuary campuses, divestinf our schools from fossil fuels, anti-poverty work through local mutual aid programs in our communities, and much much more. <br><br>YDSA-FIU fights for democratic socialism through political education and active campaigns to improve the lives of working people.</p>
+      <p>We are a student and youth chapter/section of Democratic Socialists of America (DSA) and a national organization of recognized campus chapters and several hundred organizers. We are the sister chapter of Miami-DSA, centered in Florida International University. We are students organizing in our universities, colleges, and high schools to fight for the immediate change for workers and students while building our capacity to fight for more radical and structural changes.<br><br> As an organization that is following in the steps of DSA and past socialist movements, we staunchly are anti-fascist, anti-racist, anti-imperialist, and anti-capitalist.<br><br> We work with labor campaigns to organize student workers of staff, defending immigrants through campaigns for sanctuary campuses, divesting our schools from fossil fuels, anti-poverty work through local mutual aid programs in our communities, and much much more. <br><br>YDSA-FIU fights for democratic socialism through political education and active campaigns to improve the lives of working people.</p>
     </div>
     <img id="ydsalogo2"src="images/ydsa_logo.png" alt="">
   </div>
-  <div id="executive_board">
-
+  <div id="joinus2">
+    <div class="join">
+      <a href="https://forms.gle/yAknTR4tM3VbDjJd9" target="_blank"><button class="joinus">JOIN US!</button></a>
+    </div>
+  </div>  
+  <div id="our_programs">
+    <h1 id="programs">
+      OUR PROGRAMS
+    </h1>
+    <img src="images/spring2022 ig post1.jpg" alt="">
+    <div>"Film Fridays" is our bi-weekly program hosted by our communications director, Josue, where we screen a movie with leftist themes and discuss the film afterwards. Join us to vote on the movie that gets screened!<br><br><br><br></div>
+    <div>"In Conversation" is our monthly crash-course political education program hosted by our Political Education chair, Jacob-Alexander.<br><br><br><br><br><br><br></div>
+    <div>Following in the steps of past socialists movements, we believe and practice the theory of mutual aid; a form of political participation in which people take responsibility for caring for one another and changing political conditions. "Solidarity, not charity". We hope you join us in helping out our community!</div>
   </div>
   <script src="https://cdn.jsdelivr.net/gh/stevenschobert/instafeed.js@2.0.0rc1/src/instafeed.min.js"></script>
   <script src="insta.js"></script>
