--- a/en.html
+++ b/en.html
@@ -35,7 +35,7 @@
   <div class="content">
     <button onclick="window.location.href='#about'" class="btn">About Us</button>
     <button onclick="window.location.href='#our_programs'"class="btn">Our Programs</button>
-    <button class="btn">Upcoming Events</button>
+    <button onclick="window.location.href='#upcoming_events'" class="btn">Upcoming Events</button>
     <button class="btn">Membership Perks</button>
     <button class="btn">Executive Board</button>
     <button class="btn">Social Medias</button>
@@ -78,9 +78,15 @@
       OUR PROGRAMS
     </h1>
     <img src="images/spring2022 ig post1.jpg" alt="">
-    <div>"Film Fridays" is our bi-weekly program hosted by our communications director, Josue, where we screen a movie with leftist themes and discuss the film afterwards. Join us to vote on the movie that gets screened!<br><br><br><br></div>
-    <div>"In Conversation" is our monthly crash-course political education program hosted by our Political Education chair, Jacob-Alexander.<br><br><br><br><br><br><br></div>
+    <div>"Film Fridays" is our bi-weekly program hosted by our communications director, Josue, where we screen a movie with leftist themes and discuss the movie afterwards. Join us to vote on the movie that gets screened!<br><br><br><br></div>
+    <div>"In Conversation" is our monthly crash-course political education program hosted by our Political Education chair, Jacob-Alexander. We review a piece of socialist literature in which everyone gets to discuss the topic after a presentation.<br><br><br></div>
     <div>Following in the steps of past socialists movements, we believe and practice the theory of mutual aid; a form of political participation in which people take responsibility for caring for one another and changing political conditions. "Solidarity, not charity". We hope you join us in helping out our community!</div>
+  </div>
+  <div id="upcoming_events">
+    <h1 id="upcoming">
+      UPCOMING EVENTS
+    </h1>
+    <div id="event_images">coming soon...</div>
   </div>
   <script src="https://cdn.jsdelivr.net/gh/stevenschobert/instafeed.js@2.0.0rc1/src/instafeed.min.js"></script>
   <script src="insta.js"></script>
