--- a/en.html
+++ b/en.html
@@ -78,9 +78,9 @@
       OUR PROGRAMS
     </h1>
     <img src="images/spring2022 ig post1.jpg" alt="">
-    <div>"Film Fridays" is our bi-weekly program hosted by our communications director, Josue, where we screen a movie with leftist themes and discuss the movie afterwards. Join us to vote on the movie that gets screened!<br><br><br><br></div>
-    <div>"In Conversation" is our monthly crash-course political education program hosted by our Political Education chair, Jacob-Alexander. We review a piece of socialist literature in which everyone gets to discuss the topic after a presentation.<br><br><br></div>
-    <div>Following in the steps of past socialists movements, we believe and practice the theory of mutual aid; a form of political participation in which people take responsibility for caring for one another and changing political conditions. "Solidarity, not charity". We hope you join us in helping out our community!</div>
+    <div>"Film Fridays" is our bi-weekly program hosted by our communications director, Josue, where we screen a movie with leftist themes and discuss the movie afterwards. The events include a short pre-show presentation providing context as well as a political lens to view the movie through. Join us to vote on the movie that gets screened!<br><br><br><br><br><br><br><br><br><br><br></div>
+    <div>"In Conversation" is our monthly crash-course political education program hosted by our Political Education chair, Jacob-Alexander. We review a piece of socialist literature, with the purpose of providing a short, comprehensible introduction to political theory. Taking the form of a socratic circle, we will engage the topic through conversation and discussion, incorporating the text into the development of our own thought. No prior knowledge is needed!<br><br><br> <br> <br><br><br></div>
+    <div>Following in the steps of past socialists movements, we believe and practice the theory of mutual aid; a form of political participation in which people take responsibility for caring for one another and changing political conditions. "Solidarity, not charity". Endeavored by our mutual-aid co-chairs, Emma and Oscar offer members a chance to work together throughout the semester in helping others by way of food, clothing, and medical drives in partnership with Miami DSA and like-minded organizations, as well as organizating participation in protests and direct political action. We hope you join us in helping out our community!</div>
   </div>
   <div id="upcoming_events">
     <h1 id="upcoming">
@@ -88,6 +88,19 @@
     </h1>
     <div id="event_images">coming soon...</div>
   </div>
+  <div id="membership_perks">
+    <h1 id="membership">
+      MEMBERSHIP PERKS
+    </h1>
+    <span><div> <li>Access to our Discord server!</li>  </div> <img id="discord_img" src="images/discord-logo-png-7617.png" alt=""></span>
+    <span> <div> <li id="text">Access to our WhatsApp Groupchat!</li> </div> <img id="whatsapp_img" src="images/580b57fcd9996e24bc43c543.png" alt=""></span>
+    <span> <div> <li>Vote for what movie gets to be screened for Film Fridays!</li> </div><img id="film_fridays_logo" src="images/film fridays logo.jpg" alt=""></span>
+  </div>
+  <div id="joinus3"><div class="join">
+      <a href="https://forms.gle/yAknTR4tM3VbDjJd9" target="_blank"><button class="joinus">JOIN US!</button></a>
+    </div>
+  </div>
+    
   <script src="https://cdn.jsdelivr.net/gh/stevenschobert/instafeed.js@2.0.0rc1/src/instafeed.min.js"></script>
   <script src="insta.js"></script>
   <script src="index.js"></script>
