--- a/en.html
+++ b/en.html
@@ -36,7 +36,7 @@
     <button onclick="window.location.href='#about'" class="btn">About Us</button>
     <button onclick="window.location.href='#our_programs'"class="btn">Our Programs</button>
     <button onclick="window.location.href='#upcoming_events'" class="btn">Upcoming Events</button>
-    <button class="btn">Membership Perks</button>
+    <button onclick="window.location.href='#membership_perks'" class="btn">Membership Perks</button>
     <button class="btn">Executive Board</button>
     <button class="btn">Social Medias</button>
     <a href="https://calendar.google.com/calendar/u/4?cid=Zml1eWRzYUBnbWFpbC5jb20" target="_blank"><button class="btn">Calendar</button></a>
@@ -100,7 +100,100 @@
       <a href="https://forms.gle/yAknTR4tM3VbDjJd9" target="_blank"><button class="joinus">JOIN US!</button></a>
     </div>
   </div>
-    
+  <div id="executive_board">
+    <h1 id="executive">EXECUTIVE BOARD</h1>
+    <div id="adam">
+      <span>
+        <h2>
+          Adam
+        </h2>
+        <h3>
+          President of YDSA-FIU <br> <br> Amy Klobuchar Stan <br> Average Smash Bros. Enjoyer <br> A Phantom <br> no one knows what he looks like <br> ........ <br>(or he has yet to give me his picture for the site yet)<br> all theories are plausible
+        </h3>
+      </span>
+      <span>
+        <img src="images/adam (1).png" alt="">
+      </span>
+    </div>
+    <div id="emma">
+      <span>
+        <img src="images/emma (1)meme.jpg" alt="">
+      </span>
+      <span>
+        <h2>
+          Emma
+        </h2>
+        <h3>
+          Vice President of YDSA-FIU <br> Mutual Aid Co-Chair <br><br>currently showing signs of twitter relapse <br>please keep an eye on her
+        </h3>
+      </span>
+    </div>
+    <div id="jacob">
+      <span>
+        <h2>
+          Jacob-Alexander
+        </h2>
+        <h3>
+          Political Education Chair of YDSA-FIU <br> <br>Traitor to the revolution by not liking I, Daniel Blake. 
+        </h3>
+      </span>
+      <span>
+        <img src="images/jacob.jpg" alt="">
+      </span>
+    </div>
+    <div id="oscar">
+      <span>
+        <img src="images/oscar.jpg" alt="">
+      </span>
+      <span>
+        <h2>
+          Oscar
+        </h2>
+        <h3>
+          Mutual Aid Co-Chair of YDSA-FIU<br><br>throatus
+        </h3>
+      </span>
+    </div>
+    <div id="robin">
+      <span>
+        <h2>
+          Robin
+        </h2>
+        <h3>
+          CSO Representator of YDSA-FIU <br> <br> Token Apex Legends Player <br> Hasan Piker Giga-Simp <br> resident bimbo of ydsa-fiu <br> (please dont cancel me robin this is on your twitter bio)
+        </h3>
+      </span>
+      <span>
+        <img src="images/robin (1).jpg" alt="">
+      </span>
+    </div>
+    <div id="mauricio">
+      <span>
+        <img src="images/mauricio.png" alt="">
+      </span>
+      <span>
+        <h2>
+          Mauricio
+        </h2>
+        <h3>
+          Treasurer of YDSA-FIU <br> <br> Elite Twitter Poster <br>
+        </h3>
+      </span>
+    </div>
+    <div id="josue">
+      <span>
+        <h2>
+          Josue
+        </h2>
+        <h3>
+          Communications Director of YDSA-FIU <br> <br> annoying movie guy of ydsa <br> currently regretting the comms dir position due to twitter <br>Believer of Peruvian Food Supremacy <br> Awarded Hottest Member of YDSA Unanimously <br>Chad One Piece Enjoyer<br> Supreme Overlord of YDSA <br> maker of websites <br> designer of graphics <br> master of coin
+        </h3>
+      </span>
+      <span>
+        <img src="images/josue.png" alt="">
+      </span>
+    </div>
+  </div>
   <script src="https://cdn.jsdelivr.net/gh/stevenschobert/instafeed.js@2.0.0rc1/src/instafeed.min.js"></script>
   <script src="insta.js"></script>
   <script src="index.js"></script>
