--- a/en.html
+++ b/en.html
@@ -108,7 +108,7 @@
           Adam
         </h2>
         <h3>
-          President of YDSA-FIU <br> <br> Amy Klobuchar Stan <br> Average Smash Bros. Enjoyer <br> A Phantom <br> no one knows what he looks like <br> ........ <br>(or he has yet to give me his picture for the site yet)<br> all theories are plausible
+          President of YDSA-FIU
         </h3>
       </span>
       <span>
@@ -117,14 +117,14 @@
     </div>
     <div id="emma">
       <span>
-        <img src="images/emma (1)meme.jpg" alt="">
+        <img src="images/emma (1).jpg" alt="">
       </span>
       <span>
         <h2>
           Emma
         </h2>
         <h3>
-          Vice President of YDSA-FIU <br> Mutual Aid Co-Chair <br><br>currently showing signs of twitter relapse <br>please keep an eye on her
+          Vice President of YDSA-FIU <br> Mutual Aid Co-Chair of YDSA-FIU
         </h3>
       </span>
     </div>
@@ -134,7 +134,7 @@
           Jacob-Alexander
         </h2>
         <h3>
-          Political Education Chair of YDSA-FIU <br> <br>Traitor to the revolution by not liking I, Daniel Blake. 
+          Political Education Chair of YDSA-FIU <br> "In Conversation" Director
         </h3>
       </span>
       <span>
@@ -150,7 +150,7 @@
           Oscar
         </h2>
         <h3>
-          Mutual Aid Co-Chair of YDSA-FIU<br><br>throatus
+          Mutual Aid Co-Chair of YDSA-FIU
         </h3>
       </span>
     </div>
@@ -160,7 +160,7 @@
           Robin
         </h2>
         <h3>
-          CSO Representator of YDSA-FIU <br> <br> Token Apex Legends Player <br> Hasan Piker Giga-Simp <br> resident bimbo of ydsa-fiu <br> (please dont cancel me robin this is on your twitter bio)
+          CSO Representative of YDSA-FIU
         </h3>
       </span>
       <span>
@@ -176,7 +176,7 @@
           Mauricio
         </h2>
         <h3>
-          Treasurer of YDSA-FIU <br> <br> Elite Twitter Poster <br>
+          Treasurer of YDSA-FIU
         </h3>
       </span>
     </div>
@@ -186,7 +186,7 @@
           Josue
         </h2>
         <h3>
-          Communications Director of YDSA-FIU <br> <br> annoying movie guy of ydsa <br> currently regretting the comms dir position due to twitter <br>Believer of Peruvian Food Supremacy <br> Awarded Hottest Member of YDSA Unanimously <br>Chad One Piece Enjoyer<br> Supreme Overlord of YDSA <br> maker of websites <br> designer of graphics <br> master of coin
+          Communications Director of YDSA-FIU <br>"Film Fridays" Director
         </h3>
       </span>
       <span>
