--- a/en.html
+++ b/en.html
@@ -37,8 +37,8 @@
     <button onclick="window.location.href='#our_programs'"class="btn">Our Programs</button>
     <button onclick="window.location.href='#upcoming_events'" class="btn">Upcoming Events</button>
     <button onclick="window.location.href='#membership_perks'" class="btn">Membership Perks</button>
-    <button class="btn">Executive Board</button>
-    <button class="btn">Social Medias</button>
+    <button onclick="window.location.href='#executive_board' " class="btn">Executive Board</button>
+    <button onclick="window.location.href='#social_medias'" class="btn">Social Medias</button>
     <a href="https://calendar.google.com/calendar/u/4?cid=Zml1eWRzYUBnbWFpbC5jb20" target="_blank"><button class="btn">Calendar</button></a>
     <button class="btn">Contact Us</button>
   </div>
@@ -108,7 +108,7 @@
           Adam
         </h2>
         <h3>
-          President of YDSA-FIU
+          President of YDSA @ FIU
         </h3>
       </span>
       <span>
@@ -124,7 +124,7 @@
           Emma
         </h2>
         <h3>
-          Vice President of YDSA-FIU <br> Mutual Aid Co-Chair of YDSA-FIU
+          Vice President of YDSA @ FIU <br> Mutual Aid Co-Chair of YDSA-FIU
         </h3>
       </span>
     </div>
@@ -134,7 +134,7 @@
           Jacob-Alexander
         </h2>
         <h3>
-          Political Education Chair of YDSA-FIU <br> "In Conversation" Director
+          Political Education Chair of YDSA @ FIU <br> "In Conversation" Director
         </h3>
       </span>
       <span>
@@ -150,7 +150,7 @@
           Oscar
         </h2>
         <h3>
-          Mutual Aid Co-Chair of YDSA-FIU
+          Mutual Aid Co-Chair of YDSA @ FIU
         </h3>
       </span>
     </div>
@@ -160,7 +160,7 @@
           Robin
         </h2>
         <h3>
-          CSO Representative of YDSA-FIU
+          RSO Representative of YDSA @ FIU
         </h3>
       </span>
       <span>
@@ -176,7 +176,7 @@
           Mauricio
         </h2>
         <h3>
-          Treasurer of YDSA-FIU
+          Treasurer of YDSA @ FIU
         </h3>
       </span>
     </div>
@@ -186,13 +186,30 @@
           Josue
         </h2>
         <h3>
-          Communications Director of YDSA-FIU <br>"Film Fridays" Director
+          Communications Director of YDSA @ FIU <br>"Film Fridays" Director
         </h3>
       </span>
       <span>
         <img src="images/josue.png" alt="">
       </span>
     </div>
+  </div>
+  <div id="joinus2">
+    <div class="join">
+      <a href="https://forms.gle/yAknTR4tM3VbDjJd9" target="_blank"><button class="joinus">JOIN US!</button></a>
+    </div>
+  </div>
+  <div id="social_medias">
+    <div id="social">
+      <a href="https://instagram.com/ydsafiu" target="_blank">
+        <img id="ig" src="images/Instagram-logo-transparent-PNG (1).png" alt="">
+      </a>
+      <a href="https://facebook.com/ydsafiu" target="_blank">
+        <img id="fb" src="images/Facebook logo 2021.png" alt="">
+      </a>
+      <a href="https://twitter.com/ydsafiu" target="_blank">
+        <img id="twitter"src="images/logo-twitter-png-5860.png" alt="">
+      </a></div>
   </div>
   <script src="https://cdn.jsdelivr.net/gh/stevenschobert/instafeed.js@2.0.0rc1/src/instafeed.min.js"></script>
   <script src="insta.js"></script>
