--- a/en.html
+++ b/en.html
@@ -40,7 +40,7 @@
     <button onclick="window.location.href='#executive_board' " class="btn">Executive Board</button>
     <button onclick="window.location.href='#social_medias'" class="btn">Social Medias</button>
     <a href="https://calendar.google.com/calendar/u/4?cid=Zml1eWRzYUBnbWFpbC5jb20" target="_blank"><button class="btn">Calendar</button></a>
-    <button class="btn">Contact Us</button>
+    <a href="mailto: fiuydsa@gmail.com"><button class="btn">Contact Us</button></a>
   </div>
   <div class="join">
     <a href="https://forms.gle/yAknTR4tM3VbDjJd9" target="_blank"><button class="joinus">JOIN US!</button></a>
