--- a/en.html
+++ b/en.html
@@ -124,7 +124,7 @@
           Emma
         </h2>
         <h3>
-          Vice President of YDSA @ FIU <br> Mutual Aid Co-Chair of YDSA-FIU
+          Vice President of YDSA @ FIU <br> Mutual Aid Co-Chair of YDSA @ FIU
         </h3>
       </span>
     </div>
